# lowcat

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: release.yml  rust.yml  test.yml
packaging/: README.md
src/: backend.rs  config.rs  db.rs  diagnostics.rs  downloader.rs  library.rs  macos_url_drop.rs  main.rs  media_tools.rs  model.rs  opus_source.rs  perf.rs  preview_player.rs  preview_waveform.rs  ui.rs
src/backend/: conversion.rs  scanner.rs  tests.rs
src/db/: migrations.rs  tags.rs  tests.rs
src/ui/: downloader_panel.rs  drop_overlay.rs  filter_panel.rs  folder_tags.rs  media_tools_modal.rs  modals.rs  settings_menu.rs  table.rs  titlebar.rs  toolbar.rs
src/ui/table/: native_drag.rs  preview_waveform.rs  render.rs  tests.rs
