[package]
name = "lowlib"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component" }
# Optional, for default bundled assets
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component" }
futures = "0.3.32"
lofty = "0.24.0"
open = "5"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8.23"

[target.'cfg(target_os = "macos")'.dependencies]
drag = "2.1.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
