[package]
name = "lowcat"
version = "0.1.0"
edition = "2024"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui_platform = { git = "https://github.com/zed-industries/zed", features = ["font-kit"] }
gpui-component = { path = "vendor/gpui-component/crates/ui" }
# Optional, for default bundled assets
gpui-component-assets = { path = "vendor/gpui-component/crates/assets" }
futures = "0.3.32"
lofty = "0.24.0"
open = "5"
sea-query = { version = "0.32.7", features = ["backend-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-async-std"] }
toml = "0.8.23"

[target.'cfg(target_os = "macos")'.dependencies]
drag = "2.1.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", features = ["test-support"] }
