[package]
name = "lowcat"
version = "0.3"
edition = "2024"
description = "A lightweight local sound library app."

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe" }
gpui_platform = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["font-kit"] }
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c" }
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "8e4930fd687da9133bac06fdc0789e6a179f948c" }
futures = "0.3.32"
lofty = "0.24.0"
open = "5"
sea-query = { version = "0.32.7", features = ["backend-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-async-std"] }
toml = "0.8.23"
trash = "5.2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
drag = "2.1.1"

[dev-dependencies]
gpui = { git = "https://github.com/zed-industries/zed", rev = "1d217ee39d381ac101b7cf49d3d22451ac1093fe", features = ["test-support"] }

[package.metadata.packager]
productName = "Lowcat"
identifier = "me.debuxxed.lowcat"
before-packaging-command = "cargo build --release"
icons = ["assets/logo.png"]

[package.metadata.packager.macos]
infoPlistPath = "packaging/macos/Info.plist"
signingIdentity = "-"
